2007-01-15  Per Bothner  <per@bothner.com>

	* XQuery.java (typeMap): Add mappings for normalizedString, token,
	language, NMTOKEN, Name, NCName, ID, IDREF, and ENTITY.

2007-01-14  Per Bothner  <per@bothner.com>

	* XQResolveNames.java: No longer need special handling of
	current-dateTime etc, since we now use a ThreadLocal.
	(CURRENT_DATETIME_BUILTIN, CURRENT_DATE_BUILTIN, CURRENT_TIME_BUILTIN,
	IMPLICIT_TIMEZONE_BUILTIN): Remove constants.
	(<init>): No longer pushBuiltin on corresponding functions.
	(walkApplyExp): No longer handle those builtins.
	(currentDateTimeDecl, currentDateDecl, currentTimeDecl,
	currentTimezoneDecl): Remove fields.
	(resolveModule): Remove special hndling of currentDateTimeDecl etc.
	* XQuery.java (initXQuery): Declarations of current-dateTime,
	current-date, current-time, implicit-timezone moved to here.

	* XQParser.java (checkAllowedNamespaceDeclaration): New inConstructor
	parameter.  If true, allow binding xml prefix to its standard value.

	* XQParser.java (getAxis): Error if AXIS_NAMESPACE.
	Include error code on error.

	* XQParser.java (parseContent): Ignore if empty CDATA section.
	This fixes K2-ComputeConAttr-35.xq and K2-ComputeConAttr-36.xq in XQTS.

2007-01-03  Per Bothner  <per@bothner.com>

	* XQParser.java (parse):  Use Path's resolve rather than deprecated
	URI_utils for collation.

2007-01-02  Per Bothner  <per@bothner.com>

	* XQParser.java (maybeSetLine): New methods.  Set Expression/Declaration
	file and line - but only if file is non-null.
	(various places): Use new methods.

2006-12-29  Per Bothner  <per@bothner.com>

	* XQuery.java (getTypeFor): Update to map Path to URI.

	* XQuery.java: Update for move of uriSchemeSpecified
	from InPort to Path.

2006-12-17  Per Bothner  <per@bothner.com>

	* XQuery.java (registerEnvironment): Don't allocate new XQuery.

2006-12-06  Per Bothner  <per@bothner.com>

	* XQResolveNames.java: Update for renamed Consumer methods.

2006-12-04  Per Bothner  <per@bothner.com>
